# ConjugatePairs.py

./: README.md  pyproject.toml  requirements.txt
src/: __init__.py  conjugatepriors.py
